<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="detail_movie">Detail Movie</string>

    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorite</string>

    <string name="title_activity_settings">Settings</string>

    <string name="setting_category_language">Language</string>
    <string name="title_change_language">Change Language</string>
    <string name="subtitle_change_language">Change your Application Language</string>

    <string name="setting_category_notifications">Notifikasi</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="released_today">Release Today</string>
    <string name="label_setting_daily_reminder_summary">Turn On/Off Notification</string>
    <string name="label_setting_locale_summary">Change Your Application Language</string>
    <string name="label_setting_locale_title">Change Application Language</string>
    <string name="action_notification">Notification</string>
    <string name="label_alarm_daily_reminder">Good morning! Ready to watch your new movies today?</string>
    <string name="label_alarm_released_today">,Is Coming! Come On! Watch Now! Only On Cinema!</string>
    <string name="label_daily_reminder">Daily Reminder Notification is now</string>
    <string name="label_activated">Activated !</string>
    <string name="label_deactivated">Deactivated !</string>

    <string name="key_setting_locale">key_setting_locale</string>
    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_released_today">key_released_today</string>

    <string name="favorite_movie">Favorite Movie</string>
    <string name="have_not_favorite">You have not favorite movie yet !</string>

</resources>
