<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/action_notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:summary="@string/label_setting_daily_reminder_summary"
            android:title="@string/daily_reminder" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_released_today"
            android:summary="@string/label_setting_daily_reminder_summary"
            android:title="@string/released_today" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_category_language">

        <Preference
            android:key="@string/key_setting_locale"
            android:summary="@string/subtitle_change_language"
            android:title="@string/title_change_language" />

    </PreferenceCategory>

</PreferenceScreen>